themes/academicmin/assets/scss/custom.scss
/* ... */
.dark {
  .highlight {
    &.primary2 {
      color: $sta-text;
      background: $primary1;
    }
    &.primary3 {
      color: $sta-text1;
      background: $primary2;
    }
  }
  a.highlight {
    // text-decoration: none !important;
    &:hover {
      color: $sta-text1;
      background: $primary2;
      text-decoration: none !important;
    }
  }
}


//
// Main Menu
//
.navbar {
  box-shadow: none;
  &.sticky-false {
    position: absolute;
  }
  .navbar-toggler {
    float: left;
  }
  .navbar-brand-mobile-wrapper {
    left: 3rem; // iphone 6
    right: unset; // iphone 6
  }
  .nav-icons {
    float:right; // iphone 6
  }
}
.dark .navbar {
  box-shadow: none;
}


// Mobile only
@media (max-width: 991.98px) {
  //
  // Toggle Mobile Menu
  //
  .navbar-collapse {
    background-color: $sta-primary;
    &.show {
      background-color: $sta-primary;
      padding-bottom: 1rem;
    }
  }

  .navbar-light .navbar-toggler {
    color: $sta-text3;
  }

  .docs-toggle {
    color: $sta-text;
    background: $sta-base !important;
    &.btn {
      color: $sta-text;
      background: $sta-text3;
    }
    .fa-bars,
    .toc-title {
      font-size: $fontSize-base;
    }
  }

  //
  // Logo
  // Include overrides so logo does not interfere w/ search & theme icons on mobile
  .navbar .nav-icons.ml-auto {
    margin-left: unset !important;
  }
  .navbar-brand-mobile-wrapper {
    left: unset;
    max-width: 280px;
    width: 65%;
  }
  .navbar-brand-mobile-wrapper {
    position: unset;
    left: unset;
    right: unset;
  }
  .navbar-brand img {
    max-width: 100%;
    height: 26px;
  }
  //
  // 'docs' Table of contents for 'docs' content type
  //
  .toc-title {
    padding-left: 12px;
  }

} // End 'Mobile Only'

@media (min-width: 991.98px) {
  // ie11 -otherwise svg does not show
  .navbar-brand img {
    width: 282px !important;
  }
}

// Container
.navbar .container {
  max-width: 100%; // forces logo and nav full screen width
}
// menu background
#navbar-main {
  background: $sta-primary;
}
// Mobile menu
#navbar-main .main-menu-item ul li .nav-link {
  color: $sta-base;
  &.active {
    color: $sta-base !important;
  }
  &:hover {
    color: $sta-text2;
  }
}
// Navbar height (requires body margin)

body { 
  margin-top: $navbarHeight;
}
.navbar { 
  height: $navbarHeight;
}
// Logo/brand: TEXT ONLY
.navbar-light .navbar-brand {
  color: $sta-text3;
  &:hover {
    color: $sta-text3;
  }
}
// Logo/brand: Image
.navbar-brand img {
  height: 26px;
}
// menu links
.navbar .navbar-nav .nav-link {
  font-size: $fontSize-4;
  font-weight: 300 !important;
  &.active {
    font-weight: 300 !important;
    color: $sta-text;
  }
  &:hover {
    color: $sta-text;
  }
  &:focus {
    color: $sta-text;
  }
}

@media (min-width: 991.98px) {
  // targeted need: theme selector dropdown
  .i18n-dropdown .dropdown-menu,
  .theme-dropdown .dropdown-menu {
    position: absolute !important;
    right: 0 !important;
    left: auto !important;
  }
}

// larger screen
@media (min-width: 992px) {
  #navbar-main .main-menu-item ul li .nav-link {
    color: $sta-text3;
    &.active {
      color: $sta-text3 !important;
    }
    &:hover {
      color: $sta-text3;
    }
  }
  .navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 1rem;
    padding-left: 1rem;
  }
  .navbar .nav-link {
    &.active .bottom-highlight,
    &:hover .bottom-highlight {
      position: absolute;
      bottom: -8px;
      height: 4px;
      left: 0px;
      right: 0px;
      z-index: 1;
      background: $sta-text3;
    }
  }
}
// Menu icons -targets icons b/c class is less specific than menu nav links
.navbar .navbar-nav .nav-link {
  color: $sta-text3;
}
// Menu icons
.navbar .dropdown-item.active, .navbar .dropdown-item-active {
  font-weight: bold;
  color: $sta-primary !important;
}
// Menu icons -override 'blue' that showed when theme light/dark selector hover
.navbar-light .navbar-nav .show > .nav-link {
  color: $sta-text;
}

//
// Nav No Menu Links
// 
.navbar.no-menu-links {
  .navbar-brand-mobile-wrapper {
    position: absolute;
    left: 0;
    right: 0;
    max-width: 100%;
    width: 100%;
  }
  .d-lg-inline-flex.justify-content-center {
    width: 100%;
    a {
      margin: 0 auto;
    }
  }
}


//
// Button
//

 .btn {
  color: $sta-text3;
  border: none;
  border-radius: 0;
  background: $sta-primary;
  transition: none;
  &:hover {
    color: $sta-text;
    background: $gray;
  }
}
.btn-xlarge {
  padding: 1.7rem 1.3rem;
  font-size: $fontSize-4;
}

//
// Article Titles
//

h3.article-title a:hover {
  color: $sta-primary;
  text-decoration: none;
  transition: color 0.6s ease;
}

//
// Docs
//
.docs-toc {
  margin-right: auto; // due to being flexbox child -> grow margin
  top: $navbarHeight;
  height: calc(100vh - 60px); // calc will not take var $navbarHeight
}
body {
  &[data-target="#TableOfContents"] {
    @media (min-width: 768px) {
      background: $gray;
    }
  }
}

@mixin nav-hover($bgcolor) {
  text-decoration: none !important;
  background-color: $bgcolor !important;
  border-radius: 0 12px 12px 0 !important;
  margin-right: 1rem !important;
}
// Search: appears in mobile nav toggle table of contents and standard layout
.docs-search {
  border-bottom: none;
  input {
    display: none;
  }
}

//
// Docs: Sidebar
//
.docs-sidebar {
  flex-shrink: 0;
  background: $sta-base;
  border-bottom: 0;
  border-right: 0 !important;
  -webkit-box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
  box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 1px 3px 1px rgba(60,64,67,.15);
  @media (min-width: 768px) {
    .docs-search { 
      display: none !important;
    }
  }
  @media (min-width: 1200px) {
    height: calc(100vh - 60px); // calc will not take var $navbarHeight
    // Navbar height adjustment requires docs-sidebar top adjustment
    top: $navbarHeight;
  }
}
/* ... */

